1998-04-23  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-dialog.c (gnome_dialog_new): Actually set the window
	title; it was just being ignored.

Fri Apr 24 01:32:21 CEST 1998  Eckehard Berns  <eb@berns.prima.de>

	* gnome-stock: added new icons by tigert

	* gnome-stock.c (stock_button_from_entry): added support for normal
	stock icons in stock buttons

Wed Apr 22 19:29:49 1998  Havoc Pennington  <hp@pobox.com>

	* gnome-dialog.h: Added better comments.
	* gnome-dialog.c (gnome_dialog_button_connect): New function.

1998-04-22  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-calculator.c (gnome_calculator_class_init): Register the
	signals. 

	* gnome-file-entry.c (gnome_file_entry_init): Added emission of a
	signal when the information on the entry changes. 

Wed Apr 22 16:47:49 CEST 1998  Eckehard Berns  <eb@berns.prima.de>

	* gnome-stock: added new icons by tigert

1998-04-21  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-calculator.c (gnome_calculator_init): Add padding to
	calculator buttons. 

	* gtkcalendar.c (gtk_calendar_select_day): Call
	gtk_calendar_compute_days every time when selecting a day and a
	month.

Tue Apr 21 14:26:22 1998  George Lebl  <jirka@5z.com>

	* gnome-calcualtor.c: spelling error in comment

Tue Apr 21 00:04:28 1998  George Lebl  <jirka@5z.com>

	* gnome-calculator.c: use function call finite and stop
	  NAN's. this should help portability

1998-04-20  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-calculator.c (gnome_calculator_init): Added
	internationalization. 

	* gnome-app-helper.h (GNOMEUIINFO_ITEM_STOCK): New macro, this one
	uses STOCK pixmaps.

Sun Apr 19 17:34:22 1998  Havoc Pennington  <hp@pobox.com>

	* gnome-appsmenu.c: Cleanup and rearranging, generalized some
	functions to think about moving them to gnome-util.
	* gnome-appsmenu.h: Fixed a typo.

Sat Apr 18 16:32:09 1998  George Lebl  <jirka@5z.com>

	* gnome-calculator.c: catch SIGFPE's and set error, this